# jqish

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: check.yml  test.yml
src/: error.rs  jqish.lalrpop  lexer.rs  lib.rs  parser.rs
src/starlark/: eval.rs  eval.star  mod.rs
