[package]
name = "jqish"
version = "0.1.1"
edition = "2024"
description = "A subset of the `jq` language for working with in-memory data structures"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[dependencies]
lalrpop-util = { version = "0.19.2", features = [], default-features = false }
thiserror = "1"
itertools = "0.13"

[build-dependencies]
lalrpop = { version = "0.19.2", features = [], default-features = false }
