[package]
name = "jqish"
version = "0.1.1"
edition = "2024"
description = "A subset of the `jq` language for querying data structures"
repository = "https://github.com/linabutler/jqish"
license = "Apache-2.0 OR MIT"
readme = "README.md"

[dependencies]
lalrpop-util = { version = "0.19.2", features = [], default-features = false }
thiserror = "1"
itertools = "0.13"
logos = "0.12"

[build-dependencies]
lalrpop = { version = "0.19.2", features = [], default-features = false }
